--- a/src/index.html
+++ b/src/index.html
@@ -20,13 +20,8 @@
       <h1 class="mt-5">Hello Rigo!</h1>
       <img src="./assets/img/rigo-baby.jpg" />
       <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
+        My dinosaur stolen my motorcycle
       </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
-      </div>
     </div>
 
     <!-- Do not delete this script tag, this is what connects your HTML with the Javascript code -->
